[Hello-Module]: use symbols whitch are exported from calc-module

--- a/modules/helloworld/Makefile
+++ b/modules/helloworld/Makefile
@@ -1,15 +1,17 @@
 obj-m += solution.o
 
-all: checker.h
+all:
 	sudo make -C /lib/modules/$(shell uname -r)/build M=$(shell pwd) modules
 
 clean:
 	sudo make -C /lib/modules/$(shell uname -r)/build  M=$(shell pwd) clean
 
-load:
+insert:
+	sudo dmesg -c
 	sudo insmod solution.ko
-	sudo dmesg -c
+	dmesg
 
-unload:
-	sudo rmmod solution.ko
+remove:
 	sudo dmesg -c
+	sudo rmmod solution.ko
+	dmesg
