[rtc]: add script for create device node

--- a/modules/rtc-ds3231/Makefile
+++ b/modules/rtc-ds3231/Makefile
@@ -1,6 +1,8 @@
 MODULE_NAME=rtc
 KO=$(MODULE_NAME).ko
 
+SCRIPTS=../../scripts
+
 obj-m += rtc.o
 
 all:
@@ -12,7 +14,7 @@ install:
 clean:
 	sudo make -C /lib/modules/$(shell uname -r)/build  M=$(shell pwd) clean
 
-insert:
+insert: create_node
 	sudo dmesg -c
 	sudo insmod $(KO)
 	dmesg
@@ -21,3 +23,6 @@ remove:
 	sudo dmesg -c
 	sudo rmmod $(KO)
 	dmesg
+
+create_node:
+	@./$(SCRIPTS)/create_rtc_nod.sh
