--- a/kernel/init/Kconfig
+++ b/kernel/init/Kconfig
@@ -116,6 +116,7 @@ config UAPI_HEADER_TEST
 
 config LOCALVERSION
 	string "Local version - append to kernel release"
+	default "-anisyanka-bbb-v1.0"
 	help
 	  Append an extra string to the end of your kernel version.
 	  This will show up when you type uname, for example.
