[u-boot]: add variables to bbb defconfig to save uboot params into eMMC(while don't work)

--- a/embedded_system_parts/uboot/configs/am335x_boneblack_vboot_defconfig
+++ b/embedded_system_parts/uboot/configs/am335x_boneblack_vboot_defconfig
@@ -68,3 +68,9 @@ CONFIG_USB_GADGET_VENDOR_NUM=0x0451
 CONFIG_USB_GADGET_PRODUCT_NUM=0xd022
 CONFIG_USB_ETHER=y
 CONFIG_LZO=y
+
+# Environment is on SD (mmc1), in filesystem (APP partition, part #1)
+#CONFIG_ENV_IS_IN_EXT4=y
+#CONFIG_EXT4_ENV_INTERFACE="mmc"
+#CONFIG_EXT4_ENV_DEVICE_AND_PART="1:1"
+#CONFIG_EXT4_ENV_FILE="/boot/uboot.env"
