--- a/kernel/arch/arm/configs/multi_v7_defconfig
+++ b/kernel/arch/arm/configs/multi_v7_defconfig
@@ -787,6 +787,9 @@ CONFIG_USB_HSIC_USB3503=y
 CONFIG_AB8500_USB=y
 CONFIG_KEYSTONE_USB_PHY=m
 CONFIG_NOP_USB_XCEIV=m
+CONFIG_ARM=y
+CONFIG_COMPILE_TEST=y
+CONFIG_NOP_USB_XCEIV =y
 CONFIG_AM335X_PHY_USB=y
 CONFIG_TWL6030_USB=m
 CONFIG_USB_GPIO_VBUS=y
@@ -1097,6 +1100,7 @@ CONFIG_PSTORE_RAM=y
 CONFIG_NFS_FS=y
 CONFIG_NFS_V3_ACL=y
 CONFIG_NFS_V4=y
+# support booting on an NFS exported root directory
 CONFIG_ROOT_NFS=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ISO8859_1=y
