--- a/kernel/arch/arm/configs/multi_v7_defconfig
+++ b/kernel/arch/arm/configs/multi_v7_defconfig
@@ -277,8 +277,6 @@ CONFIG_ROCKCHIP_PHY=y
 CONFIG_SMSC_PHY=y
 CONFIG_USB_PEGASUS=y
 CONFIG_USB_RTL8152=m
-CONFIG_USB_LAN78XX=m
-CONFIG_USB_USBNET=y
 CONFIG_USB_NET_SMSC75XX=y
 CONFIG_USB_NET_SMSC95XX=y
 CONFIG_BRCMFMAC=m
@@ -744,7 +742,6 @@ CONFIG_SND_SOC_SPDIF=m
 CONFIG_SND_SOC_STI_SAS=m
 CONFIG_SND_SOC_WM8978=m
 CONFIG_SND_AUDIO_GRAPH_CARD=m
-CONFIG_USB=y
 CONFIG_USB_OTG=y
 CONFIG_USB_XHCI_HCD=y
 CONFIG_USB_XHCI_MVEBU=y
@@ -763,10 +760,30 @@ CONFIG_USB_STORAGE=y
 CONFIG_USB_UAS=m
 
 # Driver for the USB OTG controller
-CONFIG_USB_MUSB_HDRC=y
-# Use the USB OTG controller in device (gadget) mode
+CONFIG_USB=y
+CONFIG_AM335X_PHY_USB=y
+CONFIG_AM335X_CONTROL_USB=y
+CONFIG_USB_GADGET=y
 CONFIG_USB_MUSB_GADGET=y
+CONFIG_USB_MUSB_DUAL_ROLE=y
+CONFIG_USB_MUSB_HDRC=y
 CONFIG_USB_MUSB_DSPS=y
+CONFIG_USB_ETHER=y
+CONFIG_USB_DUMMY_HCD=y
+CONFIG_USB_MUSB_HOST=y
+CONFIG_USB_NET_DRIVERS=y
+CONFIG_USB_NET_CDCETHER=y
+CONFIG_USB_NET_RNDIS_HOST=y
+CONFIG_USB_LAN78XX=y
+CONFIG_USB_USBNET=y
+CONFIG_USB_GADGET_MANUFACTURER="Texas Instruments"
+CONFIG_USB_GADGET_VENDOR_NUM=0x0451
+CONFIG_USB_GADGET_PRODUCT_NUM=0xd022
+
+# support booting on an NFS exported root directory
+CONFIG_NFS_FS=y
+CONFIG_ROOT_NFS=y
+CONFIG_NET_ETHERNET=y
 
 CONFIG_USB_MUSB_SUNXI=m
 CONFIG_USB_MUSB_TUSB6010=m
@@ -790,16 +807,15 @@ CONFIG_NOP_USB_XCEIV=m
 CONFIG_ARM=y
 CONFIG_COMPILE_TEST=y
 CONFIG_NOP_USB_XCEIV =y
-CONFIG_AM335X_PHY_USB=y
 CONFIG_TWL6030_USB=m
 CONFIG_USB_GPIO_VBUS=y
 CONFIG_USB_ISP1301=y
 CONFIG_USB_MXS_PHY=y
-CONFIG_USB_GADGET=y
 CONFIG_USB_FSL_USB2=y
 CONFIG_USB_RENESAS_USBHS_UDC=m
 CONFIG_USB_ASPEED_VHUB=m
-CONFIG_USB_CONFIGFS=m
+
+CONFIG_USB_CONFIGFS=y
 CONFIG_USB_CONFIGFS_SERIAL=y
 CONFIG_USB_CONFIGFS_ACM=y
 CONFIG_USB_CONFIGFS_OBEX=y
@@ -1097,11 +1113,8 @@ CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_PMSG=y
 CONFIG_PSTORE_RAM=y
-CONFIG_NFS_FS=y
 CONFIG_NFS_V3_ACL=y
 CONFIG_NFS_V4=y
-# support booting on an NFS exported root directory
-CONFIG_ROOT_NFS=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=y
