--- a/kernel/arch/arm/boot/dts/am335x-boneblack-custom.dts
+++ b/kernel/arch/arm/boot/dts/am335x-boneblack-custom.dts
@@ -5,8 +5,22 @@
 
 #include "am335x-boneblack.dts"
 
-#include <dt-bindings/display/tda998x.h>
 #include <dt-bindings/interrupt-controller/irq.h>
+#include <dt-bindings/pinctrl/am33xx.h>
+#include <dt-bindings/pinctrl/omap.h>
+
+/*
+ * P9 pin 23 external user led
+ */
+/ {
+	leds {
+		anisyan_led {
+			label = "anisyan_led";
+			gpios = <&gpio1 17 GPIO_ACTIVE_HIGH>;
+			default-state = "off";
+		};
+	};
+};
 
 /*
  * P9 pin 17 - I2C1_SCL
@@ -15,11 +29,12 @@
 &am33xx_pinmux {
 	i2c1_pins: pinmux_i2c1_pins {
 		pinctrl-single,pins = <
-			AM33XX_IOPAD(0x958, PIN_INPUT_PULLUP | MUX_MODE2) /* spi0_d1.i2c1_sda */
-			AM33XX_IOPAD(0x95c, PIN_INPUT_PULLUP | MUX_MODE2) /* spi0_cs0.i2c1_scl */
+			AM33XX_IOPAD(AM335X_PIN_SPI0_D1, PIN_INPUT_PULLUP | MUX_MODE2)
+			AM33XX_IOPAD(AM335X_PIN_SPI0_CS0, PIN_INPUT_PULLUP | MUX_MODE2)
 		>;
 	};
 };
+
 
 /* enable i2c1 device, because we use it bus for external i2c devices */
 &i2c1 {
