--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 
 # # Kernel modules files
 *.o
+*.cmd
+*.order
+*.symvers
 .tmp_versions/
 
 # Build files
@@ -11,3 +14,4 @@ build/
 # rootfs files
 *.ash_history
 nfsroot/tmp/
+nfsroot/etc/random-seed
